--- a/detector/detector/template/dashboard.html
+++ b/detector/detector/template/dashboard.html
@@ -29,7 +29,7 @@
 
 
     <!--     Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/static/assets_V3/css/max.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
     <link href="/static/assets_V3/css/pe-icon-7-stroke.css" rel="stylesheet" />
 
